# edge-biomechanics-classifier

./: .gitignore  LICENSE  README.md
ESP32-Rust/: Cargo.toml
ESP32-Rust/.cargo/: config.toml
ESP32-Rust/src/: model_weights.rs  test_data.rs
ML/notebooks/: dim_reduction.ipynb  gaussian_classifiers.ipynb  logistic_reg.ipynb
ML/scripts/: LDA.py  PCA.py  download_data.py  gaussian_classifiers.py  logistic_reg.py  utility.py
