[package]
edition      = "2024"
name         = "esp32-quick"
rust-version = "1.88"
version      = "0.1.0"

[[bin]]
name = "esp32-quick"
path = "./src/bin/main.rs"
test = false

[dependencies]
esp-hal = { version = "1.1.1", features = ["esp32"] }
# Rimosso "exception-handler" per evitare il conflitto con esp-hal
esp-backtrace = { version = "0.14.2", features = ["esp32", "panic-handler", "println"] }
esp-println = { version = "0.12.0", features = ["esp32", "auto", "log"] }
esp-bootloader-esp-idf = { version = "0.5.0", features = ["esp32"] }
critical-section = "1.2.0"


# For fine tuning these settings, please refer to https://doc.rust-lang.org/cargo/reference/profiles.html
[profile.dev]
# The default debug profile is too slow and too big for resource-constrained devices.
# Always build with some optimizations enabled.
opt-level = "s"

[profile.release]
codegen-units = 1     # LLVM can perform better optimizations using a single thread
debug         = 2     # prefer slower builds but better debugging experience
lto           = 'fat'
opt-level     = 's'
